oioioi/szkopul/static/common/szkopul.scss
.dashboard-container {
  margin-top: 50px;
  margin-bottom: 60px;
}

.dashboard-row {
  display: flex;
  justify-content: center;
}

.dashboard-panel {
  margin: 15px;
}

.dashboard-panel-head {
  text-align: center;
  background-color: #f5f5f5;
  border-style: solid solid none solid;
  border-width: 1px 1px 0 1px;
  border-color: #ddd;
  border-radius: 10px 10px 0 0;
  box-shadow: 0 1px 2px rgba(100, 100, 100, 0.4);
}

.dashboard-panel-body {
  border-style: none solid solid solid;
  border-width: 0 1px 1px 1px;
  border-color: #ddd;
  border-radius: 0 0 10px 10px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
}

.dashboard-panel-footer {
  border-top-style: solid;
  border-width: 1px;
  border-color: #ddd;
  padding-top: 1em;
  margin-bottom: 0;
}

.plain_link {
  color: #333333;
}

.plain_link:hover {
  color: #333333;
}

.content-row {
  display: flex;
  justify-content: center;
}

.szkopul-logo {
  margin-top: 4rem;
  margin-bottom: 7rem;
}

.welcome-msg {
  font-size: 18px
}

.break-all-words {
  word-break: break-all;
}

#jane-street-logo {
  width: 20%;
  margin-top: 1rem;
  margin-left: 1rem;
}

